# document-ingestor

./: .gitignore  AGENTS.md  README.md  download_static_resources.py  main.py  pyproject.toml  scrapy.cfg
.github/: copilot-instructions.md
docs/: Best_Practices.md  docling_pipeline_research.md  resources.jsonl  sources.md
document_ingestor/: items.py  middlewares.py  pipelines.py  run_spiders.py  settings.py
document_ingestor/spiders/: agilemanifesto.py  atlassian.py  martinfowler.py  mountaingoatsoftware.py  scaledagileframework.py  scrumalliance.py  scrumguides.py
src/document_ingestor/: __init__.py  crawler.py  main.py
static_resources/: Agile Software Requirements Engineering Challenges and Solutions (SLR).html
tests/: test_crawler.py  test_main.py
